--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "firebase": "9.6.6",
+    "nodemon": "^2.0.19",
     "prop-types": "^15.8.1",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "start2": "react-scripts start",
-    "start3": "node ./server/server.js",
+    "start3": "nodemon ./server/server.js",
     "heroku-postbuild2": "NPM_CONFIG_PRODUCTION=false  npm install && webpack --mode production",
     "build2": "react-scripts build",
     "webpack": "webpack --mode development",
@@ -60,11 +61,14 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@stripe/react-stripe-js": "^1.0.0",
+    "@stripe/stripe-js": "^1.0.0",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "stripe": "^8.202.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
