--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3000/checkout/",
   "engines": {
     "node": "16.x",
     "npm": "8.1.2"
