--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "firebase": "9.6.6",
+    "ngrok": "^4.3.1",
     "nodemon": "^2.0.19",
     "prop-types": "^15.8.1",
     "raw-loader": "^4.0.2",
