--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@stripe/react-stripe-js": "^1.8.1",
-    "@stripe/stripe-js": "^1.31.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.1",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "firebase": "9.6.6",
     "netlify-cli": "^10.5.1",
+    "nodemon": "^2.0.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.6",
@@ -22,11 +27,13 @@
     "redux-thunk": "^2.4.1",
     "reselect": "4.1.5",
     "sass": "1.49.7",
+    "stripe": "^9.14.0",
     "styled-components": "5.3.3",
     "web-vitals": "2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start ",
+    "client": "react-scripts start ",
+    "server": "nodemon ./server/server",
     "start1": "react-scripts start --host=0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
