--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-joyride": "^2.5.0",
     "react-redux": "7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
